syntax = "proto3";

package grpc.health.v1;
option java_package = "com.sunpe.grpc_with_consul.server.proto";
option java_multiple_files = true;
option java_generic_services = false;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

// protoc --plugin=/Users/sunpeng/workspace/local/bin/protoc-gen-grpc-java --grpc-java_out=. --java_out=. --proto_path=. -I . health.proto
